--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,26 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  overflow: hidden;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.drag {
+  app-region: drag;
+}
+
+.no-drag {
+  app-region: no-drag;
+}
+
+.server-ico {
+  width: 48px;
+  height: 48px;
+}
+
+.w-side {
+  width: 76px;
 }
