--- a/src/custom.scss
+++ b/src/custom.scss
@@ -23,3 +23,11 @@ $custom-colors: (
   border-left: solid 1px rgba(255, 255, 255, 0.3);
   border-top-left-radius: 25px;
 }
+
+.custom-divider {
+  width: 50%;
+  height: 2px;
+  background-color: white;
+  margin: 0;
+  margin-top: 8px;
+}
