--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,5 +1,6 @@
 $custom-colors: (
   "custom-dark": rgb(18, 18, 20),
+  "custom-gray": rgb(30, 30, 30),
   "custom-transparent": rgba(0, 0, 0, 0),
   // aggiungi altri colori qui
 );
