Refactor server and channel selection logic
Introduced dedicated Channel and Home components for server view. Updated state management for selected server and channel using custom events. Improved type safety for User and Server objects, and added cursor-pointer style. Enhanced login and profile components to handle user ID conversion and display.

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,7 @@
 $custom-colors: (
   "custom-dark": rgb(18, 18, 20),
   "custom-gray": rgb(30, 30, 30),
+  "custom-border": rgba(255, 255, 255, 0.3),
   "custom-transparent": rgba(0, 0, 0, 0),
   // aggiungi altri colori qui
 );
@@ -17,6 +18,10 @@ $custom-colors: (
   .border-#{$name} {
     border-color: $color !important;
   }
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .custom-border {
